--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappers\Implementations\EmailMapper.cs" />
+    <Compile Include="Mappers\Interfaces\IPriceChangesMapper.cs" />
     <Compile Include="Mappers\Interfaces\INotificationDataModelMapper.cs" />
     <Compile Include="Mappers\Implementations\NotificationDataModelMapper.cs" />
     <Compile Include="Mappers\Interfaces\INotificationProductChangesModelMapper.cs" />
@@ -98,6 +99,8 @@
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Redis\RedisConnector.cs" />
+    <Compile Include="Services\Interfaces\PriceChangesServices\IPriceChangesService.cs" />
+    <Compile Include="Services\Implementations\PriceChangesServices\PriceChangesService.cs" />
     <Compile Include="Services\Interfaces\EmailServices\IEmailBuildingService.cs" />
     <Compile Include="Services\Interfaces\EmailServices\IEmailSender.cs" />
     <Compile Include="Services\Interfaces\EmailServices\IEmailService.cs" />
@@ -114,12 +117,12 @@
     <Compile Include="Services\Interfaces\INotificationService.cs" />
     <Compile Include="Services\Interfaces\ITimeCalculationService.cs" />
     <Compile Include="Services\Interfaces\IOnlinerSearchService.cs" />
-    <Compile Include="Services\Interfaces\IPricesCheckingService.cs" />
+    <Compile Include="Services\Interfaces\PriceChangesServices\IPricesChangesInfoService.cs" />
     <Compile Include="Services\Interfaces\IProductService.cs" />
     <Compile Include="Services\Interfaces\ITrackingService.cs" />
     <Compile Include="Services\Interfaces\IUserService.cs" />
     <Compile Include="Services\Implementations\UserService.cs" />
-    <Compile Include="Services\Implementations\PriceCheckingService.cs" />
+    <Compile Include="Services\Implementations\PriceChangesServices\PriceChangesInfoService.cs" />
     <Compile Include="Templates\Builders\IPriceChangesEmailBuilder.cs" />
     <Compile Include="Templates\Builders\RazorPriceChangesEmailBuilder.cs" />
     <Compile Include="Templates\TemplatePathProvider\ITemplatePathProvider.cs" />
