--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -75,6 +75,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappers\Implementations\EmailMapper.cs" />
+    <Compile Include="Mappers\Interfaces\IUserProductsMapper.cs" />
+    <Compile Include="Mappers\Interfaces\IProductMapper.cs" />
     <Compile Include="Mappers\Interfaces\IPriceChangesMapper.cs" />
     <Compile Include="Mappers\Interfaces\INotificationDataModelMapper.cs" />
     <Compile Include="Mappers\Implementations\NotificationDataModelMapper.cs" />
@@ -99,6 +101,12 @@
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Redis\RedisConnector.cs" />
+    <Compile Include="Services\Interfaces\UserProductServices\IUserProductService.cs" />
+    <Compile Include="Services\Implementations\UserProductServices\UserProductGetService.cs" />
+    <Compile Include="Services\Implementations\UserProductServices\UserProductAddService.cs" />
+    <Compile Include="Services\Implementations\UserProductServices\UserProductService.cs" />
+    <Compile Include="Services\Interfaces\NotificationDataSevices\IUserProductChangesService.cs" />
+    <Compile Include="Services\Implementations\NotificationDataSevices\UserProductChangesService.cs" />
     <Compile Include="Services\Interfaces\PriceChangesServices\IPriceChangesService.cs" />
     <Compile Include="Services\Implementations\PriceChangesServices\PriceChangesService.cs" />
     <Compile Include="Services\Interfaces\EmailServices\IEmailBuildingService.cs" />
@@ -108,17 +116,19 @@
     <Compile Include="Services\Implementations\EmailServices\EmailService.cs" />
     <Compile Include="Services\Interfaces\INotifiableUsersProvider.cs" />
     <Compile Include="Services\Interfaces\IRedisService.cs" />
-    <Compile Include="Services\Implementations\NotificationDataService.cs" />
+    <Compile Include="Services\Implementations\NotificationDataSevices\NotificationDataService.cs" />
     <Compile Include="Services\Implementations\RedisService.cs" />
     <Compile Include="Services\Implementations\TimeCalculationService.cs" />
     <Compile Include="Services\Implementations\OnlinerSearchService.cs" />
-    <Compile Include="Services\Implementations\ProductService.cs" />
+    <Compile Include="Services\Implementations\UserProductServices\UserProductRemoveService.cs" />
     <Compile Include="Services\Implementations\TrackingService.cs" />
-    <Compile Include="Services\Interfaces\INotificationService.cs" />
+    <Compile Include="Services\Interfaces\NotificationDataSevices\INotificationDataService.cs" />
     <Compile Include="Services\Interfaces\ITimeCalculationService.cs" />
     <Compile Include="Services\Interfaces\IOnlinerSearchService.cs" />
     <Compile Include="Services\Interfaces\PriceChangesServices\IPricesChangesInfoService.cs" />
-    <Compile Include="Services\Interfaces\IProductService.cs" />
+    <Compile Include="Services\Interfaces\UserProductServices\IUserProductAddService.cs" />
+    <Compile Include="Services\Interfaces\UserProductServices\IUserProductGetService.cs" />
+    <Compile Include="Services\Interfaces\UserProductServices\IUserProductRemoveService.cs" />
     <Compile Include="Services\Interfaces\ITrackingService.cs" />
     <Compile Include="Services\Interfaces\IUserService.cs" />
     <Compile Include="Services\Implementations\UserService.cs" />
